Varias cosas comentadas ingnorables y todo bien hasta sala tab asientos, falta menu desplegable